--- a/public/index.html
+++ b/public/index.html
@@ -1,29 +1,39 @@
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Chat App</title>
-		<div id="messages"></div>
 
-		<form id="message-form">
-			<input type="text" name="message" placeholder="Message" />
-			<button id="send">Send</button>
-		</form>
-		<button id="send-location">Send Location</button>
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>Chat App</title>
+	<div id="messages"></div>
+	<div id="location"></div>
 
-		<script id="message-template" type="text/html">
+	<form id="message-form">
+		<input type="text" name="message" placeholder="Message" />
+		<button id="send">Send</button>
+	</form>
+	<button id="send-location">Send Location</button>
+
+	<script id="location-message-template" type="text/html">
 			<div>
 				<p>{{message}}</p>
 			</div>
 		</script>
 
-		<script src="/socket.io/socket.io.js"></script>
-		<script src="/js/chat.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.6.0/qs.min.js"></script>
-	</head>
-	<body>
-		<a>Chat App</a>
-	</body>
+	<script id="location-template" type="text/html">
+			<div>
+				<a href={{url}}>My current location</a>
+			</div>
+		</script>
+
+	<script src="/socket.io/socket.io.js"></script>
+	<script src="/js/chat.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.6.0/qs.min.js"></script>
+</head>
+
+<body>
+	<a>Chat App</a>
+</body>
+
 </html>
